fix: add missing margins

--- a/source/sass/components/_module.scss
+++ b/source/sass/components/_module.scss
@@ -3,3 +3,9 @@
         padding: 10px 0 0 0;
     }
 }
+
+.submit-event-form {
+    .sub-fields, .form-section {
+        margin-bottom: 1rem;
+    }
+}
